ListView of chats

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/logos/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
